# secser

security/: acinclude.m4  config.h  config.h.in  configure  configure.ac  defs.h
security/autom4te-2.53.cache/: output.0  requests
security/config/: mkinstalldirs
security/src/: Makefile  Makefile.in  initfunc.c  ip_addr.c  ip_addr.h  main.d  msg.h  parser.c  process.c  receive.c  secretkey.c  semaphore.c  semaphore.h  str.h  systemsign.c  systemsign.h  udp_server.c  udp_server.h
security/src/.adhoc/: cert1.gpg  options  partial.gpg.backup  pubring.gpg  syspub.gpg  trustdb.gpg
security/src/cipher/: Makefile.am  dynload.c  g10c.c  rsa.c
security/src/g10/: export.c  keyserver.c  mainproc.c  openfile.c  options.skel  passphrase.c  verify.c
security/src/include/: types.h  util.h
security/src/mpi/: Makefile.am  Makefile.in  config.links
security/src/tools/: Makefile  bftest  gpgsplit  shmtest
security/src/util/: Makefile  Makefile.am  common.c  fileutil.c  g10u.c  logger.c
security/src/zlib/: Makefile  Makefile.in  adler32.c  compress.c  crc32.c  deflate.c  deflate.h  trees.c  uncompr.c  zconf.h  zutil.c  zutil.h
server/server/: Makefile  Makefile.in  aclocal.m4  config.status
server/server/autom4te-2.53.cache/: traces.0
server/server/config/: mkinstalldirs
server/server/src/: ChangeLog  Makefile.am  adhoc.h  globals.h  handle.c  interpolate.c  main.c  parser.h  route.c  secretsign.c  signal.c  str.h  testadhoc.txt  udp_server.d
server/server/src/.adhoc/: random_seed  secring.gpg  tmpcert  usercfg.txt
server/server/src/.deps/: handle.Po  initfunc.Po  interpolate.Po  ip_addr.Po  main.Po  parser.Po  process.Po  receive.Po  route.Po  secretkey.Po  secretsign.Po  semaphore.Po  signal.Po  systemsign.Po  udp_server.Po
server/server/src/cipher/: Makefile  Makefile.in  rijndael.c  twofish.c
server/server/src/cipher/.deps/: blowfish.Po  cast5.Po  cipher.Po  des.Po  dsa.Po  dynload.Po  elgamal.Po  g10c.Po  idea-stub.Po  md.Po  md5.Po  primegen.Po  pubkey.Po  random.Po  rijndael.Po  rmd160.Po  rndegd.Po  rndlinux.Po  rndunix.Po  rndw32.Po  rsa.Po  sha1.Po  smallprime.Po  twofish.Po
server/server/src/g10/: Makefile  Makefile.am  Makefile.in  build-packet.d  delkey.c.out  main.h  options.skel  packet.h  plaintext.c  revoke.asc  sign.c  test.key  unggul.gpg
server/server/src/g10/.deps/: armor.Po  build-packet.Po  cipher.Po  comment.Po  compress.Po  dearmor.Po  decrypt.Po  delkey.Po  encode.Po  encr-data.Po  exec.Po  export.Po  free-packet.Po  getkey.Po  helptext.Po  hkp.Po  import.Po  kbnode.Po  keydb.Po  keyedit.Po  keygen.Po  keyid.Po  keylist.Po  keyring.Po  keyserver.Po  mainproc.Po  mdfilter.Po  misc.Po  openfile.Po  parse-packet.Po  passphrase.Po  photoid.Po  pipemode.Po  pkclist.Po  plaintext.Po  pubkey-enc.Po  revoke.Po  seckey-cert.Po  seskey.Po  sig-check.Po  (+9 more)
server/server/src/include/: .cipher.h.swp  mpi.h
server/server/src/mpi/: Makefile  g10m.c  mpicoder.c
server/server/src/mpi/.deps/: g10m.Po  mpi-add.Po  mpi-bit.Po  mpi-cmp.Po  mpi-div.Po  mpi-gcd.Po  mpi-inline.Po  mpi-inv.Po  mpi-mpow.Po  mpi-mul.Po  mpi-pow.Po  mpi-scan.Po  mpicoder.Po  mpih-add1.Po  mpih-cmp.Po  mpih-div.Po  mpih-lshift.Po  mpih-mul.Po  mpih-mul1.Po  mpih-mul2.Po  mpih-mul3.Po  mpih-rshift.Po  mpih-sub1.Po  mpiutil.Po
server/server/src/tools/: Makefile.in  clean-sat  mk-tdata  mpicalc
server/server/src/util/: Makefile.in  memory.c
server/server/src/util/.deps/: dotlock.Po  errors.Po  fileutil.Po  g10u.Po  http.Po  iobuf.Po  logger.Po  memory.Po  miscutil.Po  secmem.Po  simple-gettext.Po  strgutil.Po  ttyio.Po  w32reg.Po
server/server/src/zlib/: ChangeLog  adler32.c  compress.c  crc32.c  deflate.c  deflate.h  trees.c  uncompr.c  zconf.h  zutil.c  zutil.h
server/server/src/zlib/.deps/: adler32.Po  compress.Po  crc32.Po  deflate.Po  infblock.Po  infcodes.Po  inffast.Po  inflate.Po  inftrees.Po  infutil.Po  trees.Po  uncompr.Po  zutil.Po
